2012-10-05  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/multiarch/memset-niagara4.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/multiarch/memset-niagara4.S: New
	file.
	* sysdeps/sparc/sparc64/multiarch/Makefile: Add to
	sysdep_routines.
	* sysdeps/sparc/sparc32/sparcv9/multiarch/Makefile: Likewise.
	* sysdeps/sparc/sparc64/multiarch/memset.S: Use Niagara-4 memset
	and bzero when HWCAP_SPARC_CRYPTO is present.

2012-10-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14602]
	* string/test-strstr.c (check2): New function.
	(test_main): Call check2.

	* string/Makefile (tests): Remove bug-strstr1, bug-strcasestr1
	and bug-strchr1.
	* string/bug-strcasestr1.c (do_test): Moved to ...
	* string/test-strcasestr.c (check1): Here.  New function.
	(do_one_test): Break out result checking code into ...
	(check_result): This.  New function.
	(do_one_test): Call check_result.
	(test_main): Call check1.
	* string/bug-strchr1.c (do_test): Moved to ...
	* string/test-strchr.c (check1): Here.  New function.
	(do_one_test): Break out result checking code into ...
	(check_result): This.  New function.
	(do_one_test): Call check_result.
	(test_main): Call check1.
	* string/bug-strstr1.c (main): Moved to ...
	* string/test-strchr.c (check1): Here.  New function.
	(do_one_test): Break out result checking code into ...
	(check_result): This.  New function.
	(do_one_test): Call check_result.
	(test_main): Call check1.
	* string/bug-strcasestr1.c: Removed.
	* string/bug-strchr1.c: Likewise.
	* string/bug-strstr1.c: Likewise.

	* elf/Makefile (dl-routines): Add hwcaps.
	* elf/dl-support.c (_dl_important_hwcaps): Removed.
	* elf/dl-sysdep.c (_DL_FIRST_EXTRA): Likewise.
	(_dl_important_hwcaps): Moved to ...
	* elf/dl-hwcaps.c: Here.  New file.
	* sysdeps/mach/hurd/dl-sysdep.c (_dl_important_hwcaps): Removed.

	[BZ #14557]
	* elf/setup-vdso.h (setup_vdso): Set GL(dl_nns) to 1 for vDSO
	if IS_IN_rtld isn't defined.

	* elf/dl-support.c (_dl_sysinfo_map): New.